Program runs ithink