@@ -26,10 +26,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>13</source>
-                    <target>13</target>
+                    <source>15</source>
+                    <target>15</target>
                     <release>15</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -37,7 +36,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>Controller.MainController</mainClass>
+                    <mainClass>Controller.Client</mainClass>
 <!--                    <options>-->
 <!--                        <option>&#45;&#45;add-modules</option>-->
 <!--                        <option>javafx.controls,javafx.fxml,javafx.base</option>-->
